<resources>
    <string name="app_name">Portlux</string>


    <string name="action_settings">Settings</string>
    <string name="Search">Sök</string>
    <string name="searchHint">Sök</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="splash">Portlux Pocket</string>
    <string name="title_activity_detailed_view">DetailedViewActivity</string>


    <string name="name">Namn</string>
    <string name="email">email@mail.com</string>
    <string name="cellphone">070-70 70 707</string>
    <string name="peronalNumber">2000-01-01</string>
    <string name="member">Medlem: </string>
    <string name="setMember">Nej</string>
    <string name="rowBerthsOwnership">A2, B43, ...</string>
    <string name="rowBerthsTenacy">A43, K7, ...</string>

    <string name="TenancyTitle">Hyresrätt</string>
    <string name="TenancyTitlePlural">Hyresrätter</string>
    <string name="OwnershipTitle">Nyttjanderätt</string>
    <string name="OwnershipTitlePlural">Nyttjanderätter</string>

    <string name="rowQueue">4+</string>
    <string name="QueueTitle">Kö</string>
    <string name="QueueTitleLong">Köplats</string>
    <string name="QueueTitleLongPlural">Köplatser</string>
    <string name="switchView">Byt till Båt</string>
    <string name="emptyResult">Din sökning matchade inte någon användare</string>
    <string name="berth">Båtplats</string>
    <string name="Power">El</string>
    <string name="OwnerTitle">Platsägare</string>
    <string name="TenancyTitleP">Platshyrare</string>
    <string name="title_activity_detailed_berth_view">DetailedBerthViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="Setfree">Hyr ut</string>
    <string name="away">Ledighet</string>
    <string name="place">Plats:</string>
    <string name="queuePlace">Köplats:</string>
    <string name="Standinline">+ Skapa ny köplats</string>
    <string name="wish">Önskan:</string>
    <string name="harbour">Hamn:</string>
    <string name="FreeTitle">Ledig som gästplats</string>
    <string name="freeforguests">Ledig som gästplats</string>
    <string name="notfreeforguests">Ej ledig som gästplats</string>
    <string name="From">Från</string>
    <string name="Until">Till:</string>
    <string name="title_activity_guest_tab">GuestTab</string>
    <string name="createFreePeriod">+ Lägg till som gästplats</string>

</resources>
