<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"

    tools:context="com.portlux.portluxpocket.DetailedUserViewActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar_detailed"></include>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvPersonalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvName"
                android:layout_below="@+id/tvName"
                android:layout_marginTop="10dp"
                android:text="@string/peronalNumber" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvCellphone"
                android:layout_below="@+id/tvCellphone"
                android:layout_marginTop="10dp"
                android:text="@string/email"

                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvMember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member"

                    />

                <TextView
                    android:id="@+id/tvSetMember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvMember"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/tvMember"
                    android:text="@string/setMember" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvCellphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvPersonalNumber"
                android:layout_below="@+id/tvPersonalNumber"
                android:layout_marginTop="10dp"
                android:text="@string/cellphone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/itemList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
