<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:textColor="@color/searchTitles"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="1.5"/>
        <TextView
            android:textColor="@color/searchTitles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/OwnershipTitle"
            android:layout_weight="1.3"/>
        <TextView
            android:textColor="@color/searchTitles"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/TenancyTitle"
            android:layout_weight="1"
            />

    </LinearLayout>



    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>