<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context="com.portlux.portluxpocket.DetailedBerthViewActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar_detailed"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBerth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="A1"
                    android:textColor="#000000"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/textViewHarbour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kullavik" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/freeforguests" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOwnershipTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/titlebg"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="@string/OwnerTitle"
                android:textColor="@color/OffWhite" />

            <TextView
                android:id="@+id/textViewOwnership"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="ägare" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTenacyTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/titlebg"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="@string/TenancyTitleP"
                android:textColor="@color/OffWhite" />

            <TextView
                android:id="@+id/textViewTenacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="hyrare" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/titlebg"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="@string/FreeTitle"
                android:textColor="@color/OffWhite" />

            <ListView
                android:id="@+id/listViewFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
